# VXGI-Renderer

./: README.md  VXGI-Renderer.sln
VXGI-Renderer/: CMakeLists.txt  VXGI-Renderer.vcxproj  VXGI-Renderer.vcxproj.filters
VXGI-Renderer/shader/: render.frag  render.vert  shadowMap.frag  shadowMap.vert  voxelVisualization.frag  voxelVisualization.geom  voxelVisualization.vert  voxelization.frag  voxelization.geom  voxelization.vert
VXGI-Renderer/src/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
